Finished Add - Get - Delete Tasks from room database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TodoC41</string>
+    <string name="to_do_list">To Do List</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="please_enter_a_valid_title">Please enter a valid title</string>
+    <string name="please_enter_a_valid_description">Please enter a valid description</string>
 </resources>
